--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -52,20 +52,17 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        <%= render './components/email_link', {
-          data_attributes: {
-            "module": "track-click",
-            "track-action": action_based_email_link_label,
-            "track-category": "StayUpdated",
-            "track-label": brexit_checker_email_signup_path
-          },
-          link_text: action_based_email_link_label,
-          link_href: brexit_checker_email_signup_path(c: criteria_keys),
-        } %>
-      </div>
-    </div>
+    <%= render 'components/email_link', {
+      data_attributes: {
+        "module": "track-click",
+        "track-action": action_based_email_link_label,
+        "track-category": "StayUpdated",
+        "track-label": brexit_checker_email_signup_path
+      },
+      link_text: action_based_email_link_label,
+      link_href: brexit_checker_email_signup_path(c: criteria_keys),
+      link_title: t("brexit_checker.results.email_sign_up_title"),
+    } %>
 
     <%= render 'results_business_actions', business_results: @business_results if @business_results.any? %>
     <%= render 'results_citizen_actions', citizen_results_groups: @citizen_results_groups if @citizen_results_groups.any? %>
