--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -65,7 +65,7 @@
               <%= render "govuk_publishing_components/components/subscription-links", signup_links %>
             </div>
           </div>
-          <div id="js-facet-tag-wrapper" aria-live="assertive">
+          <div id="js-facet-tag-wrapper" class="facet-tags-block" aria-live="assertive">
             <%= render "facet_tags", facet_tags.present %>
           </div>
         </div>
