--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -15,7 +15,7 @@
         value: result_set_presenter.user_supplied_keywords,
       }  %>
     </div>
-    <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter</button>
+    <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter <span class="js-selected-filter-count"><%= facet_tags.display_total_selected_filters %></span></button>
   <% end %>
 
   <div data-module="track-click" data-track-category="filterClicked"
@@ -39,7 +39,9 @@
             <div id="js-facet-tag-block" class="app-mobile-facet-tags"  data-module="remove-filter">
               <%= render "facet_tags", facet_tags.present %>
             </div>
-            <button class="gem-c-button govuk-button app-c-mobile-result-count js-result-count" type="button">Show <%= result_set_presenter.displayed_total %></button>
+            <div class="app-c-mobile-result-count">
+              <button class="gem-c-button govuk-button js-result-count" type="button">Show <%= result_set_presenter.displayed_total %></button>
+            </div>
           </div>
         </div>
       </div>
