--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -41,7 +41,7 @@
           > 
           <%= render 'spelling_suggestion' %>
         </div>
-        <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter</button>
+        <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter <span class="js-selected-filter-count"><%= facet_tags.display_total_selected_filters %></span></button>
       <% elsif topic_finder?(filter_params) %>
         <%= link_to topic_finder_parent(filter_params)['title'], topic_finder_parent(filter_params)['base_path'], class: 'topic-finder__taxon-link' %>
         <%= render partial: 'govuk_publishing_components/components/title', locals: {
