Simplify rendering citizen/business or no actions
I think it's clearer what's going on if the results page can check for a partial's criteria at the level of results and then conditionally render a partial

Especially given the added complexity that is about to arrive with subgroups

Also removes action_audiences, we're no longer using it

--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -67,16 +67,9 @@
       </div>
     </div>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-section-break--bold">
-    <div class="govuk-grid-row govuk-!-margin-bottom-6">
-      <div class="govuk-grid-column-one-third">
-        <%= render 'results_answers', answers: format_criteria_list(@criteria) %>
-      </div>
-      <div class="govuk-grid-column-two-thirds">
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-section-break--bold govuk-section-break--visible-mobile-only">
-        <%= render 'action_audiences', audiences: format_action_audiences(@actions), action_based_description: action_based_description %>
-      </div>
-    </div>
+    <%= render 'results_business_actions', business_results: @business_results if @business_results.any? %>
+    <%= render 'results_citizen_actions', citizen_results_groups: @citizen_results_groups if @citizen_results_groups.any? %>
+    <%= render 'results_with_no_actions', criteria: @criteria if (@business_results.empty? && @citizen_results_groups.empty?) %>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-section-break--bold">
     <div class="govuk-grid-row">
