--- a/app/views/brexit_checker/_results_criteria.html.erb
+++ b/app/views/brexit_checker/_results_criteria.html.erb
@@ -1,21 +1,21 @@
 <% if criteria.present? %>
   <aside class="govuk-grid-column-one-third">
-    <% if local_assigns[:heading] %>
-      <h3 class="govuk-heading-m"><%= heading %></h3>
-    <% end %>
-    <p class="govuk-body brexit-checker__critera_explaination">
-      <%= t('brexit_checker.results.criteria.list_context') %>
-    </p>
-    <ul class="govuk-list govuk-list--bullet">
-      <% criteria.each do |criterion| %>
-        <li class="brexit-checker__criterion">
-          <%= criterion.text %>
-        </li>
+    <div class="brexit-checker__criteria">
+      <% if local_assigns[:heading] %>
+        <h3 class="govuk-heading-m"><%= heading %></h3>
       <% end %>
-    </ul>
+      <p class="govuk-body govuk-!-font-size-16">
+        <%= t('brexit_checker.results.criteria.list_context') %>
+      </p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+        <% criteria.each do |criterion| %>
+          <li><%= criterion.text %></li>
+        <% end %>
+      </ul>
+    </div>
   </aside>
 <% else %>
-  <p class="govuk-body">
+  <p class="govuk-body govuk-!-font-size-16">
     <%= t('brexit_checker.results.criteria.no_answers') %>
   </p>
 <% end %>
