Change subscribe section, full width and add border
Replaces a horizontal rule that was previously above the element in the brexit checker results page

--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -57,6 +57,8 @@
   }
 
   .stay-updated__heading {
+    border-top: 1px solid $govuk-border-colour;
+    padding-top: govuk-spacing(6);
     margin-top: govuk-spacing(6);
   }
 
