Update subscribe section content

--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -62,6 +62,11 @@
     margin-top: govuk-spacing(6);
   }
 
+  .stay-updated_description {
+    margin-bottom: govuk-spacing(4);
+    @include govuk-font(19);
+  }
+
   .brexit-checker__no-results {
     margin-top: govuk-spacing(6);
   }
