Remove css override classes from new results page

--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -1,4 +1,9 @@
 .brexit-checker-results-page {
+  .brexit-checker__critera_explaination,
+  .brexit-checker__criterion {
+    @include govuk-font(16);
+  }
+
   .brexit-checker-results {
     margin-top: govuk-spacing(6);
   }
@@ -10,6 +15,10 @@
 
   .brexit-checker__action {
     margin: 0 0 govuk-spacing(6);
+
+    .brexit-checker__action_title {
+      font-weight: bold;
+    }
   }
 
   .brexit-checker__content-wrapper {
