Reinstate ecommerce tracking for new checker results layout

--- a/app/views/brexit_checker/_results_business_actions.html.erb
+++ b/app/views/brexit_checker/_results_business_actions.html.erb
@@ -8,7 +8,7 @@
   <section class="brexit-checker-audience">
       <header>
         <h2 class="govuk-heading-l action-audience__heading">
-          <%= t('brexit_checker.results.audiences.business.heading') %>
+          <%= heading %>
         </h2>
       </header>
       <section class="brexit-checker-actions__group">
