--- a/app/views/finders/_checkbox_facet.html.erb
+++ b/app/views/finders/_checkbox_facet.html.erb
@@ -1,7 +1,8 @@
-<div class="govuk-checkboxes" id="<%= checkbox_facet.key %>">
+<div id="<%= checkbox_facet.key %>">
   <%= render "govuk_publishing_components/components/checkboxes", {
     name: checkbox_facet.key,
     margin_bottom: true,
+    small: true,
     items: [
       {
         label: checkbox_facet.name,
