--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -1,23 +1,5 @@
 <div class="filter-form">
-  <% if !content_item.all_content_finder? %>
-    <div id="keywords">
-      <% label_text = capture do %>
-        Search <span class="govuk-visually-hidden"><%= content_item.title %></span>
-      <% end %>
-      <%= render "govuk_publishing_components/components/input", {
-        controls: "js-search-results-info",
-        id: "finder-keyword-search",
-        label: {
-          text: label_text
-        },
-        name: "keywords",
-        search_icon: true,
-        value: result_set_presenter.user_supplied_keywords,
-      }  %>
-    </div>
-    <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter <span class="js-selected-filter-count"><%= facet_tags.display_total_selected_filters %></span></button>
-  <% end %>
-
+  <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter <span class="js-selected-filter-count"><%= facet_tags.display_total_selected_filters %></span></button>
   <div data-module="track-click" data-track-category="filterClicked"
       data-track-action="skip-Link" data-track-label="">
     <%= render "govuk_publishing_components/components/skip_link", {
@@ -32,12 +14,16 @@
       <div id="facet-wrapper" class="facets">
         <div class="facets__box">
           <div class="facets__content">
-            <h1 class="gem-c-title__text app-mobile-filter-title">
-              Filter
-            </h1>
+            <div class="facets__header">
+              <h1 class="gem-c-title__text app-mobile-filter-title">
+                Filter
+              </h1>
+              <button class="app-c-button-as-link app-c-return-to-results js-return-to-results" type="button">Return to results</button>
+            </div>
             <%= render facets.select(&:filterable?) %>
             <div id="js-facet-tag-block" class="app-mobile-facet-tags"  data-module="remove-filter">
               <%= render "facet_tags", facet_tags.present %>
+              <button class="app-c-button-as-link app-c-clear-filters js-clear-filters" type="button">Clear all filters</button>
             </div>
             <div class="app-c-mobile-result-count">
               <button class="gem-c-button govuk-button js-result-count" type="button">Show <%= result_set_presenter.displayed_total %></button>
