New searchbox in the page header for other finders

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -16,19 +16,12 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
-        <% label_text = capture do %>
-          <h1 class="app-c-search-page-heading">Search<span class="govuk-visually-hidden"> all content</span></h1>
-        <% end %>
+        <h1 class="app-c-search-page-heading">Search<span class="govuk-visually-hidden"> all content</span></h1>
         <div id="keywords" class="app-patch--search-input-override">
-          <%= render "govuk_publishing_components/components/input", {
+          <%= render "govuk_publishing_components/components/search", {
             controls: "js-search-results-info",
             id: "finder-keyword-search",
-            label: {
-              text: label_text,
-            },
             name: "keywords",
-            search_icon: true,
-            type: 'search',
             value: result_set_presenter.user_supplied_keywords,
           } %>
         </div>
@@ -41,7 +34,6 @@
           > 
           <%= render 'spelling_suggestion' %>
         </div>
-        <button class="app-c-button-as-link govuk-!-font-weight-bold app-mobile-filters-link js-show-mobile-filters">Filter <span class="js-selected-filter-count"><%= facet_tags.display_total_selected_filters %></span></button>
       <% elsif topic_finder?(filter_params) %>
         <%= link_to topic_finder_parent(filter_params)['title'], topic_finder_parent(filter_params)['base_path'], class: 'topic-finder__taxon-link' %>
         <%= render partial: 'govuk_publishing_components/components/title', locals: {
@@ -51,7 +43,15 @@
       <% else %>
         <%= render partial: 'govuk_publishing_components/components/title', locals: {
           title: content_item.title,
+          margin_bottom: 4
         } %>
+        <%= render "govuk_publishing_components/components/search", {
+            controls: "js-search-results-info",
+            id: "finder-keyword-search",
+            name: "keywords",
+            label_text: "Search #{content_item.title}", 
+            value: result_set_presenter.user_supplied_keywords,
+          } %>
       <% end %>
 
       <% if page_metadata.any? %>
