--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -1,7 +1,7 @@
 .app-c-expander {
   padding: 0 0 govuk-spacing(2);
   margin-bottom: govuk-spacing(2);
-  border-bottom: 1px solid govuk-colour("light-grey");
+  border-bottom: 1px solid $govuk-border-colour;
 }
 
 .app-c-expander__title {
