Remove link underline, modal header padding and border colour

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -435,8 +435,8 @@ mark {
     background-color: govuk-colour("white");
     padding: govuk_spacing(3);
     display: block;
-    border-top: 1px solid govuk-colour("light-grey", $legacy: "grey-2");
-    box-shadow: 0px 0 5px rgba(govuk-colour("light-grey", $legacy: "grey-2"), 0.8);
+    border-top: 1px solid $govuk-border-colour;
+    box-shadow: 0px 0 5px rgba($govuk-border-colour, 0.8);
   }
 
   .facets--as-modal {
@@ -451,15 +451,19 @@ mark {
     background: govuk-colour("white");
 
     .facets__header {
-      padding: govuk-spacing(2);
+      padding: govuk-spacing(2) 0;
       display: grid;
       grid-auto-flow: column;
-      border-bottom: 1px solid govuk-colour("light-grey", $legacy: "grey-2");
+      border-bottom: 1px solid $govuk-border-colour;
       margin-bottom: govuk-spacing(2);
     }
 
     .app-c-return-to-results {
       justify-self: end;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
 
     .facets__box {
@@ -488,6 +492,10 @@ mark {
     .app-c-clear-filters {
       display: inline-block;
       margin-top: govuk-spacing(2);
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
