Return to results button focus height

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -460,6 +460,7 @@ mark {
 
     .app-c-return-to-results {
       justify-self: end;
+      align-self: center;
       text-decoration: none;
       &:hover {
         text-decoration: underline;
