Aligns filter elements into a neat column

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -385,3 +385,8 @@ mark {
   margin-bottom: govuk-spacing(7);
   padding-bottom: govuk-spacing(0);
 }
+
+.facet-container {
+  padding-left: 13px;
+  padding-right: 13px;
+}
