--- a/app/views/finders/_radio_facet.html.erb
+++ b/app/views/finders/_radio_facet.html.erb
@@ -1,5 +1,7 @@
-<%= render "govuk_publishing_components/components/radio", {
-  name: radio_facet.key,
-  small: true,
-  items: radio_facet.options
-} %>
+<div class="facet-container">
+  <%= render "govuk_publishing_components/components/radio", {
+    name: radio_facet.key,
+    small: true,
+    items: radio_facet.options
+  } %>
+</div>
