--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <%= finder_top_result_variant.analytics_meta_tag.html_safe if content_item.eu_exit_finder? %>
-  <%= hide_keyword_facet_tags_variant.analytics_meta_tag.html_safe if in_hide_keyword_facet_tags_ab_test_scope? %>
+  <%= learn_to_rank_variant.analytics_meta_tag.html_safe if in_learn_to_rank_scope? %>
 <% end %>
 
 <% content_for :meta_title, content_item.title %>
