Remove the facet tags A/B test code

--- a/app/views/finders/_facet_tags.html.erb
+++ b/app/views/finders/_facet_tags.html.erb
@@ -8,8 +8,7 @@
 <% if local_assigns[:applied_filters] %>
   <div class="facet-tags" data-module="track-click">
     <% local_assigns[:applied_filters].each do |applied_filter| %>
-      <% # apply type of facet tag as class to the group to be a be able to target it  %> 
-      <div class="facet-tags__group facet-tags__group--<%= applied_filter.first[:data_facet].strip.downcase %>">
+      <div class="facet-tags__group">
         <% applied_filter.each do |filter| %>
           <div class="facet-tags__wrapper">
             <p class="facet-tags__preposition"><%= filter[:preposition] %></p>
