--- a/app/views/brexit_checker/_results_business_actions.html.erb
+++ b/app/views/brexit_checker/_results_business_actions.html.erb
@@ -1,5 +1,5 @@
 <section
-  class="brexit-checker-actions brexit-checker-business-actions"
+  class="brexit-checker-actions"
   data-analytics-ecommerce
   data-ecommerce-start-index="1"
   data-list-title="Brexit checker results: <%= t('brexit_checker.results.audiences.business.heading') %>"
