--- a/app/views/brexit_checker/_results_citizen_actions.html.erb
+++ b/app/views/brexit_checker/_results_citizen_actions.html.erb
@@ -4,7 +4,7 @@
       <%= t('brexit_checker.results.audiences.citizen.heading') %>
     </h2>
   </header>
-  <section class="brexit-checker-audience brexit-checker-audience-citizen">
+  <section class="brexit-checker-audience">
     <% citizen_results_groups.each.with_index do |grouping, group_index| %>
       <section
         class="brexit-checker-actions__group"
