--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -4,16 +4,15 @@
       <% label_text = capture do %>
         Search <span class="govuk-visually-hidden"><%= content_item.title %></span>
       <% end %>
-      <%= render "govuk_publishing_components/components/input", {
+      <%= render "govuk_publishing_components/components/search", {
         controls: "js-search-results-info",
         id: "finder-keyword-search",
-        label: {
-          text: label_text
-        },
         name: "keywords",
-        search_icon: true,
+        type: 'search',
         value: result_set_presenter.user_supplied_keywords,
-      }  %>
+        inline_label: false,
+        label_text: label_text
+      } %>
     </div>
     <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters">
       Filter <span class="govuk-visually-hidden"> results</span>
