Hide total result count on mobile
We'll be showing the result count in the filters view
so we're hiding it from the result view on mobile.

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -270,9 +270,11 @@ mark {
   @include govuk-font(19);
   white-space: nowrap;
   margin-bottom: govuk-spacing(4);
+  display: none;
 
   @include govuk-media-query($from: tablet) {
     margin-bottom: govuk-spacing(2);
+    display: block;
   }
 }
 
