--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -34,8 +34,26 @@
         + <%= t("finders.facet_collection.facet_disclosure.more", default: "Show more search options") %>
       </button>
 
-      <div id="facet-wrapper" class="facet-toggle__content facet-toggle__content--hide">
-        <%= render facets.select(&:filterable?) %>
+      <div id="facet-wrapper" data-module="mobile-filters-modal" class="facets facet-toggle__content facet-toggle__content--hide">
+        <div class="facets__box">
+          <div class="facets__header">
+            <h1 class="gem-c-title__text">Filter</h1>
+            <button class="app-c-button-as-link facets__return-link js-close-filters" type="button">
+              Return to results
+            </button>
+          </div>
+          <div class="facets__content">
+            <%= render facets.select(&:filterable?) %>
+            <button class="app-c-button-as-link facets__clear-link js-clear-selected-filters" type="button">
+              Clear all filters
+            </button> 
+          </div>
+          <div class="facets__footer">
+              <button class="gem-c-button govuk-button js-close-filters js-show-results" type="button">
+                Show <span class="js-result-count"> <%= result_set_presenter.displayed_total %><span>
+              </button>
+            </div>
+        </div>
       </div>
     </div>
   <% end %>
