--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -69,5 +69,6 @@
     <%= render 'results_with_no_actions', criteria: @criteria if (@business_results.empty? && @citizen_results_groups.empty?) %>
 
     <%= render 'stay_updated' %>
+    <%= render 'share_links' %>
   <% end %>
 </div>
