Change size of brexit checker results email prompt
Cross referenced with the prototype here https://govuk-dynamic-list.herokuapp.com/get-ready-for-brexit/results/uk-national-and-business-mvp

The notification prompt  were larger and more prominent

--- a/app/assets/stylesheets/components/_email-link.scss
+++ b/app/assets/stylesheets/components/_email-link.scss
@@ -3,6 +3,10 @@
   padding: govuk-spacing(4);
   background: govuk-colour('grey-4');
 
+  .govuk-heading-m {
+    margin-bottom: govuk-spacing(2);
+  }
+
   .app-c-email-link__title {
     font-weight: bold;
   }
@@ -14,6 +18,7 @@
   }
 
   .app-c-email-link__link {
+    @include govuk-font(19);
 
     &:visited .app-c-email-link__icon {
       fill: $govuk-link-visited-colour;
