Hide filter toggle button on mobile (if it exists)
As we'll have a new interaction for accessing filters on
mobile, we can now hide "Show more/less search options" on mobile

For now we'll still keep in on desktop if content item
has that configuration set to true.

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -227,7 +227,11 @@ mark {
 
 .js-enabled {
   .facet-toggle {
-    display: inline-block;
+    display: none;
+    @include govuk-media-query($from: tablet) {
+      display: inline-block;
+      margin-bottom: govuk-spacing(6);
+    }
   }
 
   // on mobile we have a modal hidden with Javascript
