Hide facet tags on mobile
We'll be showing facet tags in the mobile filter view on mobile,
so we have no need to them here.
There is no change to table / desktop views.

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -110,6 +110,13 @@ mark {
   margin-bottom: govuk-spacing(8);
 }
 
+.facet-tags__container {
+  display: none;
+  @include govuk-media-query($from: tablet) {
+    display: block;
+  }
+}
+
 .facet-tags {
   padding-bottom: govuk-spacing(1);
 }
