--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -35,7 +35,8 @@
           > 
           <%= render 'spelling_suggestion' %>
         </div>
-        <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters">
+        <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters"
+          data-toggle="mobile-filters-modal" data-target="facet-wrapper">
           Filter <span class="govuk-visually-hidden"> results</span>
           <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
         </button>
