Add the "Filter" button on mobile
Filter button is only visible on mobile vieport and clicking it will
show the filter modal.

If any filters are selected, it will show the number of filters.

It has visually hidden support text for screenreaders.

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -15,6 +15,10 @@
         value: result_set_presenter.user_supplied_keywords,
       }  %>
     </div>
+    <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters">
+      Filter <span class="govuk-visually-hidden"> results</span>
+      <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
+    </button>
   <% end %>
 
   <div data-module="track-click" data-track-category="filterClicked"
