Remove redundant WAI-ARIA attribute role=main
A WAI-ARIA attribute that has the exact same features as the HTML element it has been applied to has been used. The WAI-ARIA attribute is redundant since is doesn't provide the user with any additional information.

For landmarks it has previously been a recommendation to use HTML5 and WAI-ARIA landmark roles together (e.g. WAI-ARIA role="navigation" on HTML5 'nav' elements) to maximize support, but with the widespread adoption of HTML5 this is no longer needed.

The WAI-ARIA attribute can be removed without any impact for end users. The result will be cleaner, easier to maintain code.

--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -16,7 +16,7 @@
 
   <body class="<%= yield :body_classes %>">
     <div id="wrapper">
-      <main id="content" role="main" class="finder-frontend-content">
+      <main id="content" class="finder-frontend-content">
         <div class="finder-frontend">
           <%= yield %>
         </div>
