Replace grey-4 with suggested alternative
As documented here
 https://github.com/alphagov/govuk-frontend/releases/tag/v3.0.0

--- a/app/assets/stylesheets/components/_email-link.scss
+++ b/app/assets/stylesheets/components/_email-link.scss
@@ -1,7 +1,7 @@
 .app-c-email-link {
   display: block;
   padding: govuk-spacing(4);
-  background: govuk-colour('grey-4');
+  background: govuk-colour('light-grey');
 
   .govuk-heading-m {
     margin-bottom: govuk-spacing(2);
