Use new grey colour variable replacement

--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -48,7 +48,7 @@
 
   .brexit-checker-actions__description {
     padding: govuk-spacing(4);
-    background-color: govuk-colour('grey-4');
+    background-color: govuk-colour('light-grey');
   }
 
   .brexit-checker-actions__group {
