Remove wrapper class from finder layout

--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body class="<%= yield :body_classes %>">
-    <div id="wrapper">
+    <div>
       <main id="content" class="finder-frontend-content">
         <div class="finder-frontend">
           <%= yield %>
