Add type=button to filter modal trigger
When user pressed ENTER on keyword search when
there were no suggestions, a modal open event was triggered.

As these buttons are all part of the `<form>` element, buttons without explicit type default to submit.

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -35,7 +35,7 @@
           > 
           <%= render 'spelling_suggestion' %>
         </div>
-        <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters"
+        <button type="button" class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters"
           data-toggle="mobile-filters-modal" data-target="facet-wrapper"
           data-module="track-click" data-track-category="filterClicked" 
           data-track-action="mobile-filter-button" data-track-label="">
