Fix aria-controls paramater on search input
We use aria-controls to denote which elements in a page an interactive element
or set of elements has control over and affects.

This is shown here https://components.publishing.service.gov.uk/component-guide/search/with_aria_controls_attribute

but it's been missed in the implementation.

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -5,7 +5,7 @@
         Search <span class="govuk-visually-hidden"><%= content_item.title %></span>
       <% end %>
       <%= render "govuk_publishing_components/components/search", {
-        controls: "js-search-results-info",
+        aria_controls: "js-search-results-info",
         id: "finder-keyword-search",
         name: "keywords",
         type: 'search',
