--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -19,7 +19,7 @@
         <h1 class="app-c-search-page-heading">Search<span class="govuk-visually-hidden"> all content</span></h1>
         <div id="keywords" class="app-patch--search-input-override">
           <%= render "govuk_publishing_components/components/search", {
-            controls: "js-search-results-info",
+            aria_controls: "js-search-results-info",
             id: "finder-keyword-search",
             name: "keywords",
             type: 'search',
