--- a/app/views/brexit_checker/email_signup.html.erb
+++ b/app/views/brexit_checker/email_signup.html.erb
@@ -13,11 +13,11 @@
     },
     {
       title: t('brexit_checker.breadcrumbs.brexit-home'),
-      url: "/brexit"
+      url: "/transition"
     },
     {
       title: t('brexit_checker.breadcrumbs.brexit-check'),
-      url: "/get-ready-brexit-check"
+      url: "/transition-check"
     },
     {
       title: t('brexit_checker.breadcrumbs.results'),
