Remove QA css related to business finder
class govuk-form-footer still seems to be being used in transition checker questions, as it's the last remaining css class, I've renamed the file to apply to brexit checker questions, and dumped everything else

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,5 @@ $govuk-use-legacy-palette: false;
 @import 'components/*';
 @import 'finder_frontend';
 @import 'views/search';
-@import 'views/qa';
+@import 'views/brexit_checker_question_page';
 @import 'views/brexit_checker_results_page';
