Autocomplete shows all values on focus

--- a/app/views/brexit_checker/_question_autocomplete.html.erb
+++ b/app/views/brexit_checker/_question_autocomplete.html.erb
@@ -10,6 +10,7 @@
   },
   hint: "Select all that apply",
   search_with_label: true,
+  show_values_on_focus: true,
   select: {
     multiple: true,
     options: @business_sectors
