--- a/app/views/brexit_checker/_results_with_no_actions.html.erb
+++ b/app/views/brexit_checker/_results_with_no_actions.html.erb
@@ -1,6 +1,6 @@
 <section class="brexit-checker__no-results">
   <div class="govuk-grid-row">
-    <%= render 'results_criteria', criteria: @criteria %>
+    <%= render 'results_criteria', criteria: criteria %>
     <div class="govuk-grid-column-two-thirds">
       <p class="govuk-body brexit-checker__no-results-warning">
         <%= t("brexit_checker.action_audiences.no_results") %>
